use array as list